styles.scss
/* ... */
.about {
    h4.heading svg-inline { display: none; }
    &.accordion {
        h4.heading svg-inline { 
            display: inline-block; 
            vertical-align: bottom;
            @include prefix(transition, transform $transition linear, webkit moz);
            transform: rotate(180deg) scale(0.5);
            svg * { fill: $lightgray; }
        }
        h4.heading.expanded svg-inline {
            transform: rotate(270deg) scale(0.5);
            svg * { fill: black; }
        }
        h4.heading { 
            margin: 0;
        }
        section {
            padding: 0;
            .content { padding: 4 * $margin 3 * $margin; }
        }
    }
    .person {
        height: 500px;  // TODO: make responsive;
        p {
            margin-top: 4 * $margin;
            margin-right: 4 * $margin;
        }
    }
    .person-image {
        width: 40%;
        padding-top: 40%;
        border: 2px solid black;
        background-position: 50% 50%;
        background-size: cover;
        margin-bottom: 6 * $margin;
    }
    #process {
        .subheading {
            margin-top: 6 * $margin;
            margin-bottom: 4 * $margin;
            text-align: center;
        }
        .steps p {
            padding-left: 2 * $margin; 
        }
        .workshop-list ul {
            list-style-type: decimal; 
            font-size: 12px;
            line-height: 20px;
            padding-left: 4*$margin;
        }
        .img-wrapper { 
            width: 100%;
            height: 140px;
            padding: 12px 0;
            margin-bottom: 40px;
            img { max-height: 120px; }
        }
        .step-circle {
            width: 65%; padding-top: 65%;
            border: 2px solid black;
            border-radius: 50%;
            position: relative;
            svg-inline {
                position: absolute;
                top: 50%; left: 50%;
                transform: translate(-50%,-50%);
                z-index: 1;
                svg * { fill: black; }
            }
        }
        .step-circle::after {
            content: "";
            border: 1px solid black;
            position: absolute;
            top: 50%; 
            width: 125%; right: -77%;
        }
        .step-circle.last::after {
            content: initial;
        }
    }
    #values, #faq {
        p { padding-left: 10%; }
        .content h4 { 
            font-size: 19px;
            padding-top: $margin; 
        }
        .disclaimer { margin-top: 10 * $margin; }
        .disclaimer-text { color: gray; }
    }
    #advisory-network, #team {
        .network-members { margin-top: 3 * $margin; }
        .content h4 { 
            font-size: 19px; 
            margin-bottom: 0;
        }
    }
    #beautiful-trouble-and-action-aid {
        .blurb { min-height: 12 * $margin; }
        .introduction { 
            padding-bottom: 6 * $margin; 
            text-align: center; 
        }
    }
    #partners {
        h5 { padding-bottom: 48px; }
        .img-wrapper { 
            width: 100%;
            height: 140px;
            img { max-height: 120px; }
        }
    }
    #faq {
        .question { padding-bottom: 3 * $margin; }
    }
}
.platforms, .contribute {
    .page-heading {
        margin-bottom: 6 * $margin;
    }
}
.platforms {
    .platform-image {
        padding-top: 40%;
        background-size: contain;
        background-repeat: no-repeat;
        background-position: 50% 50%;
    }
    h3.title { font-size: 48px; }
    svg-inline { 
        float: right;   //TODO: fix for bidirectional site
        position: relative;
        top: 28px;
        svg * { fill: $darkgray !important; }
    }
    .what, .how, .links {
        padding-top: 2 * $margin;
        h4 { padding-bottom: $margin; }
    }
}
.contribute {
    #how-it-works {
        text-align: center;
    }
    .instructions-heading {
        padding-top: 6 * $margin;
    }
    svg {
        max-width: 100%;
    }
    .types {
        text-align: left;
        .description { 
            display: none; 
            width: 100%;
            position: relative;
            margin-top: 6 * $margin;
        }
        .description::before {
            content: "";
            position: absolute;
            top: -8 * $margin;
            left: 50%;
            height: 6 * $margin;
            border: 1px solid black;
        }
        .active.description { 
            display: inline-block; 
        }
    }
}
.bar-center {
    position: relative;
    height: 90px;
}
.bar-center::after {
    content: "";
    position: absolute;
    bottom: 0; top: 0;
    left: 50%;
    border: 1px solid black;
}


// Development styles
.language-selection {
    display: none;
    span {
        cursor: pointer;
        font-size: 30px;
        border-left: 2px solid black;
        padding: 5px;
        &:first-of-type {
            border-left: none;
        }
        &.selected {
            font-weight: bold;
            font-style: italic;
        }
        &.disabled {
            pointer-events: none;
            color: lightgray;
        }
    }
}

.module-share {
    cursor: not-allowed !important;
    color: #ddd !important;
    svg * {
        fill: #ddd !important;
    }
}

